# python_for_data_analysis

./: .gitignore  Task_1.ipynb  Task_2.ipynb  Task_3.ipynb
hotest_month_city/: README.md  pyproject.toml
hotest_month_city/project/: df.py  main.py
hotest_month_city/tests/project/: test_get_df.py  test_get_hotest_city.py  test_get_hotest_month.py
